Project Starmoon Version 2 Change Log. Please record changes made to the project such
    as additions and modifications with an attached date and signature.

10/30/2021: Created the project, initial project directory tree, and blank scripts for
    the i386 architecture. Also added a blank 'boot.s' file in arch/i386 for building up
    the bootsector of the kernel.
    Timothy Gonzales "firebug98@gmail.com"

10/30/2021: Filled in the multiboot header, created a new stack, and set up the stack 
    frames for stack tracing. Also built up a preliminary linker script for the i386
    ELF format. Added a stack trace function for debugging once interrupts are enabled.
    Created an explicit heap location to be aligned on a page boundary, as will the stack.
    Included the global con/destructor crtX.s files for initializing global classes.
    Timothy Gonzales "firebug98@gmail.com"

10/31/2021: Created basic GDT and functions for filling the GDT and LDT. Created main()
    function for the platform-independent kernel.o. Set up basic Makefile scripts for
    building the kernel. Note: Add to the Makefiles as features and components are
    added.
    Timothy Gonzales "firebug98@gmail.com"

11/4/2021: Added some libc stuff that had been previously worked out, and implemented
    text-mode VGA for the kernel in 80x25 16-color mode. Plan to fully document new
    additions over the next couple days. Then will work on setting up interrupts and
    some processor features.
    Timothy Gonzales "firebug98@gmail.com"

11/9/2021: Fully commented all source code throughout the project. Started work on 
    adding interrupt support of vectors 0-31. 
    Timothy Gonzales "firebug98@gmail.com